--- a/app/views/statuses/_status.html.erb
+++ b/app/views/statuses/_status.html.erb
@@ -41,7 +41,7 @@
             </li>
             <li>
               <%= link_to new_comment_path(commentable_id:
-                status.id, commentable_type: "status"), class: "btn btn-primary btn-comment", data:{ toggle: "collapse" }, remote: true, style: "color:#FFFFFF;" do %>
+                status.id, commentable_type: "status"), class: "btn btn-basic btn-comment", data:{ toggle: "collapse" }, remote: true do %>
                 <i class="fa fa-comments-o"></i>
               <% end %>
             </li>
