--- a/app/views/tours/_tour.html.erb
+++ b/app/views/tours/_tour.html.erb
@@ -24,7 +24,7 @@
     </div>
     <div class="g-post-ranking">
       <a title="" href="#" class="likes"><i class="fa fa-heart-o"></i>10 likes</a>
-      <a title="" href="#" class="coments"><i class="fa fa-comment-o"></i>5 comments</a>
+      <a class="coments"><i class="fa fa-comment-o"></i><%= tour.comments.size %> comments</a>
     </div>
   </div>
 </div>
