--- a/app/views/sidebars/_sidebar-2.html.erb
+++ b/app/views/sidebars/_sidebar-2.html.erb
@@ -77,25 +77,7 @@
     </div>
     </div><!-- page like widget -->
     <div class="widget">
-      <div class="banner medium-opacity bluesh">
-        <div class="bg-image" ></div>
-        <div class="baner-top">
-          <span><%= image_tag "book-icon.png" %></span>
-          <i class="fa fa-ellipsis-h"></i>
-        </div>
-        <div class="banermeta">
-          <p>
-            <%= I18n.t ".CREATE_YOUR_OWN_FAVOURIT_PAGE" %>
-          </p>
-          <a data-ripple="" title="" href="#"><%= I18n.t ".Start_Now!" %></a>
-        </div>
-      </div>
-    </div>
-    <div class="widget friend-list stick-widget">
-      <h4 class="widget-title"><%= I18n.t ".Friends" %></h4>
-      <ul id="people-list" class="friendz-list">
-        <%= link_to "Chat With People", users_path %>
-      </ul>
+      <%= render "friendships/friend_list", user: current_user %>
     </div>
   </div>
 </aside>
