--- a/app/views/layouts/admin/_header.html.erb
+++ b/app/views/layouts/admin/_header.html.erb
@@ -17,7 +17,7 @@
         <li class="nav-item d-none d-md-block"><a class="nav-link sidebartoggler waves-effect waves-light" href="javascript:void(0)" data-sidebartype="mini-sidebar"><i class="mdi mdi-menu font-24"></i></a></li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-           <span class="d-none d-md-block"><%= t("language") %><i class="fa fa-angle-down fa-lg"></i></span>
+           <span class="d-none d-md-block"><%= t("language") %><i class="fa fa-angle-down"></i></span>
            <span class="d-block d-md-none"><i class="fa fa-plus"></i></span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -100,20 +100,23 @@
             <%= image_tag "1.jpg", alt:"user", class:"rounded-circle", width:"31"%>
           </a>
           <div class="dropdown-menu dropdown-menu-right user-dd animated">
-            <a class="dropdown-item" href="javascript:void(0)">
+            <%= link_to "#",
+            data: { confirm: "Sure ?" }, method: :delete, class: "dropdown-item" do %>
               <i class="ti-user m-r-5 m-l-5"></i>
               <%= t("profile") %>
-            </a>
+            <% end %>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="javascript:void(0)">
+            <%= link_to "#",
+            data: { confirm: "Sure ?" }, method: :delete, class: "dropdown-item" do %>
               <i class="ti-settings m-r-5 m-l-5"></i>
               <%= t("edit_profile") %>
-            </a>
+            <% end %>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="javascript:void(0)">
+            <%= link_to destroy_user_session_path,
+            data: { confirm: "Sure ?" }, method: :delete, class: "dropdown-item" do %>
               <i class="fa fa-power-off m-r-5 m-l-5"></i>
               <%= t("logout") %>
-            </a>
+            <% end %>
             <div class="dropdown-divider"></div>
           </div>
         </li>
