--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -10,16 +10,15 @@
   </head>
 
   <body>
-    <div class="preloader" style="display: none;">
-      <div class="lds-ripple">
-        <div class="lds-pos"></div>
-        <div class="lds-pos"></div>
-      </div>
-    </div>
     <div id="main-wrapper" data-sidebartype="full">
       <%= render "layouts/admin/header" %>
       <%= render "layouts/admin/sidebar" %>
       <div class="page-wrapper">
+        <% if notice %>
+          <p class="notice"><%= notice %></p>
+        <% elsif alert %>
+          <p class="alert"><%= alert %></p>
+        <% end %>
         <%= yield %>
         <%= render "layouts/admin/footer" %>
       </div>
