admin index post

--- a/app/assets/stylesheets/admin/application.css.scss
+++ b/app/assets/stylesheets/admin/application.css.scss
@@ -2,6 +2,8 @@
  *= require materialdesignicons
  *= require ./css/float-chart.css
  *= require ./css/style.min.css
+ *= require ./css/dataTables.bootstrap4.css
+ *= require ./css/multicheck.css
  */
 @import "font-awesome";
 @import "themify-icons";
