--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -15,10 +15,14 @@
           </a>
         </li>
         <li class="sidebar-item">
-          <a class="sidebar-link waves-effect waves-dark sidebar-link" href="pages-buttons.html" aria-expanded="false">
+          <%= link_to admin_statuses_path, class: "sidebar-link waves-effect waves-dark", aria: { expanded: "false" } do %>
             <i class="mdi mdi-relative-scale"></i>
             <span class="hide-menu"><%= t("post_managerment") %></span>
-          </a>
+          <% end %>
+          <ul aria-expanded="false" class="collapse first-level">
+            <li class="sidebar-item"><a href="form-basic.html" class="sidebar-link"><i class="mdi mdi-note-outline"></i><span class="hide-menu"> Form Basic </span></a></li>
+            <li class="sidebar-item"><a href="form-wizard.html" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> Form Wizard </span></a></li>
+          </ul>
         </li>
         <li class="sidebar-item">
           <a class="sidebar-link waves-effect waves-dark sidebar-link" href="charts.html" aria-expanded="false">
