--- a/app/views/admin/statuses/index.html.erb
+++ b/app/views/admin/statuses/index.html.erb
@@ -8,13 +8,13 @@
             <table id="zero_config" class="table table-striped table-bordered dataTable" role="grid" aria-describedby="zero_config_info">
               <thead>
                 <tr role="row">
-                  <th class="sorting_asc" tabindex="0" aria-controls="zero_config" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Name: activate to sort column descending" style="width: 135px;">
+                  <th class="sorting_asc" tabindex="0" aria-controls="zero_config" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Name: activate to sort column descending" style="width: 80px;">
                     <%= t("activerecord.attributes.user")%>
                   </th>
-                  <th class="sorting" tabindex="0" aria-controls="zero_config" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 218px;">
+                  <th class="sorting" tabindex="0" aria-controls="zero_config" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 300px;">
                     <%= t("activerecord.attributes.content")%>
                   </th>
-                  <th class="sorting" tabindex="0" aria-controls="zero_config" rowspan="1" colspan="1" aria-label="Office: activate to sort column ascending" style="width: 97px;">
+                  <th class="sorting" tabindex="0" aria-controls="zero_config" rowspan="1" colspan="1" aria-label="Office: activate to sort column ascending" style="width: 80px;">
                     <%= t("activerecord.attributes.time")%>
                   </th>
                   <th style="width: 30px;"></th>
@@ -34,13 +34,17 @@
                     </td>
                     <td>
                       <%= link_to admin_status_path(status) do %>
-                        <i class="fa fa-pencil-square-o" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="<%= t("text.view")%>!"></i>
+                        <i class="fa fa-pencil-square-o" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="<%= t("text.view")%>!"><%= t("text.view")%></i>
                       <% end %>
-                      <%= link_to admin_status_path(status) do %>
-                        <i class="fa fa-lock" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="<%= t("text.block")%>!"></i>
-                      <% end %>
-                      <%= link_to admin_status_path(status) do %>
-                        <i class="fa fa-trash" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="<%= t("text.delete")%>!"></i>
+                      <div id="block">
+                        <% if status.block? %>
+                          <%= render "unlock_index", status: status %>
+                        <% else %>
+                          <%= render "lock_index", status: status %>
+                        <% end %>
+                      </div>
+                      <%= link_to admin_status_path(status), method: :delete, data: { confirm: t("text.confirm") } do %>
+                        <i class="fa fa-trash" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="<%= t("text.delete")%>!"><%= t("text.delete")%></i>
                       <% end %>
                     </td>
                   </tr>
