admim tour show, delete, update

--- a/app/views/admin/statuses/show.html.erb
+++ b/app/views/admin/statuses/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <div class="card">
-        <div class="comment-widgets scrollable ps-container ps-theme-default" data-ps-id="767c4ef5-cf07-74cf-8555-87f663bd6fcd">
+        <div class="scrollable ps-container ps-theme-default" data-ps-id="767c4ef5-cf07-74cf-8555-87f663bd6fcd" style="margin: 10px;">
           <div class="d-flex flex-row comment-row">
             <div class="p-2">
               <%= image_tag @status.user.image.image_link.to_s, alt: "user", width: "50", class: "rounded-circle" if @status.user.image.present? %>
