update quyền user sử dụng ajax jquery + fix bug

--- a/app/views/admin/statuses/index.html.erb
+++ b/app/views/admin/statuses/index.html.erb
@@ -36,7 +36,7 @@
                       <%= link_to admin_status_path(status) do %>
                         <i class="fa fa-pencil-square-o" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="<%= t("text.view")%>!"><%= t("text.view")%></i>
                       <% end %>
-                      <div id="block">
+                      <div id="block-<%= status.id %>">
                         <% if status.block? %>
                           <%= render "unlock_index", status: status %>
                         <% else %>
