--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div id="main-wrapper" data-sidebartype="full">
+    <div id="main-wrapper" data-sidebartype="mini-sidebar" class="mini-sidebar">
       <%= render "layouts/admin/header" %>
       <%= render "layouts/admin/sidebar" %>
       <div class="page-wrapper">
