--- a/app/views/admin/homes/index.html.erb
+++ b/app/views/admin/homes/index.html.erb
@@ -1,17 +1,10 @@
-<div class="page-breadcrumb">
-  <div class="row">
-    <div class="col-12 d-flex no-block align-items-center">
-      <h4 class="page-title"><%= t("admin.layouts.dashboard") %></h4>
-    </div>
-  </div>
-</div>
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6 col-lg-2 col-xlg-3">
       <div class="card card-hover">
         <div class="box bg-cyan text-center">
           <h1 class="font-light text-white"><i class="mdi mdi-view-dashboard"></i></h1>
-          <h6 class="text-white"><%= t("admin.layouts.dashboard") %></h6>
+          <h6 class="text-white"><%= t("dashboard") %></h6>
         </div>
       </div>
     </div>
@@ -44,46 +37,6 @@
         <div class="box bg-info text-center">
           <h1 class="font-light text-white"><i class="mdi mdi-arrow-all"></i></h1>
           <h6 class="text-white">Full Width</h6>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-lg-4 col-xlg-3">
-      <div class="card card-hover">
-        <div class="box bg-danger text-center">
-          <h1 class="font-light text-white"><i class="mdi mdi-receipt"></i></h1>
-          <h6 class="text-white">Forms</h6>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-lg-2 col-xlg-3">
-      <div class="card card-hover">
-        <div class="box bg-info text-center">
-          <h1 class="font-light text-white"><i class="mdi mdi-relative-scale"></i></h1>
-          <h6 class="text-white">Buttons</h6>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-lg-2 col-xlg-3">
-      <div class="card card-hover">
-        <div class="box bg-cyan text-center">
-          <h1 class="font-light text-white"><i class="mdi mdi-pencil"></i></h1>
-          <h6 class="text-white">Elements</h6>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-lg-2 col-xlg-3">
-      <div class="card card-hover">
-        <div class="box bg-success text-center">
-          <h1 class="font-light text-white"><i class="mdi mdi-calendar-check"></i></h1>
-          <h6 class="text-white">Calnedar</h6>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-lg-2 col-xlg-3">
-      <div class="card card-hover">
-        <div class="box bg-warning text-center">
-          <h1 class="font-light text-white"><i class="mdi mdi-alert"></i></h1>
-          <h6 class="text-white">Errors</h6>
         </div>
       </div>
     </div>
