--- a/app/views/admin/tours/show.html.erb
+++ b/app/views/admin/tours/show.html.erb
@@ -13,7 +13,7 @@
                 <span class="text-muted float-right">
                   <%= t("text.published") %>: <%= time_ago_in_words(@tour.created_at) %>
                 </span>
-                <div style="float: left;" id="block_show">
+                <div style="float: left;" id="block_show-<%= @tour.id %>">
                   <% if @tour.block? %>
                     <%= render "unlock_show", tour: @tour%>
                   <% else %>
