--- a/app/views/admin/tours/update.js.erb
+++ b/app/views/admin/tours/update.js.erb
@@ -1,5 +1,7 @@
-<% if @user.block? %>
-  $("#block").html("<%= j(render('admin/users/unlock_index', user: @user)) %>");
+<% if @tour.block? %>
+  $("#block-<%= @tour.id %>").html("<%= j(render('admin/tours/unlock_index', tour: @tour)) %>");
+  $("#block_show-#{@tour.id}").html("<%= j(render('admin/tours/unlock_show', tour: @tour)) %>");
 <% else %>
-  $("#block").html("<%= j(render('admin/users/lock_index', user: @user)) %>");
+  $("#block-<%= @tour.id %>").html("<%= j(render('admin/tours/lock_index', tour: @tour)) %>");
+  $("#block_show-<%= @tour.id %>").html("<%= j(render('admin/tours/lock_show', tour: @tour)) %>");
 <% end %>
