--- a/app/views/admin/users/_lock_index.html.erb
+++ b/app/views/admin/users/_lock_index.html.erb
@@ -1,3 +1,3 @@
-<%= link_to admin_user_path(user), method: :patch, id: "block", remote: true do %>
+<%= link_to admin_user_path(user), method: :patch, remote: true do %>
   <i class="fa fa-lock" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="<%= t("text.block")%>!"><%= t("text.block")%></i>
 <% end %>
