--- a/app/views/tours/_form.html.erb
+++ b/app/views/tours/_form.html.erb
@@ -16,7 +16,7 @@
             </div>
             <div class="form-group">
               <h5><%= t("cost") %></h5>
-              <%= f.text_field :cost, placeholder: cost , class: "dropdown" %>
+              <%= f.text_field :cost, placeholder: cost , class: "form_control" %>
             </div>
           </div>
           <div class="col-lg-6">
