--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -14,14 +14,20 @@
       <%= render "layouts/admin/header" %>
       <%= render "layouts/admin/sidebar" %>
       <div class="page-wrapper">
-        <% if notice %>
-          <p class="notice"><%= notice %></p>
-        <% elsif alert %>
-          <p class="alert"><%= alert %></p>
-        <% end %>
         <div class="container-fluid">
           <div class="row">
             <div class="col-12">
+              <% if notice %>
+                <div class="alert alert-success alert-dismissible fade show">
+                  <button type="button" class="close" data-dismiss="alert">&times;</button>
+                  <p><%= notice %></p>
+                </div>
+              <% elsif alert %>
+                <div class="alert alert-danger alert-dismissible fade show">
+                  <button type="button" class="close" data-dismiss="alert">&times;</button>
+                  <p><%= alert %></p>
+                </div>
+              <% end %>
               <%= yield %>
             </div>
           </div>
