--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,15 @@
   <body>
     <%= render "layouts/header" %>
     <% if notice %>
-      <p class="notice"><%= notice %></p>
+      <div class="alert alert-success alert-dismissible fade show">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <p><%= notice %></p>
+      </div>
     <% elsif alert %>
-      <p class="alert"><%= alert %></p>
+      <div class="alert alert-danger alert-dismissible fade show">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <p><%= alert %></p>
+      </div>
     <% end %>
     <%= yield %>
     <%= render "layouts/footer" %>
