--- a/app/views/admin/tours/index.html.erb
+++ b/app/views/admin/tours/index.html.erb
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-body">
-    <h5 class="card-title"><%= t("tour_managerment")%></h5>
+    <h3 class="card-title" style="text-align: center;"><%= t("tour_managerment")%></h3>
     <div class="table-responsive">
       <div id="zero_config_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4">
         <div class="row">
