--- a/app/views/statuses/_status.html.erb
+++ b/app/views/statuses/_status.html.erb
@@ -7,7 +7,7 @@
       <div class="top-area">
         <ul class="main-menu">
           <div class="friend-name">
-            <ins><%= link_to status.user.name, "#" %></ins>
+            <ins><%= link_to status.user.name, user_path(status.user) %></ins>
             <span><%= t("text.published") %>: <%= time_ago_in_words(status.created_at) %></span>
           </div>
         </ul>
