show place and custom page home

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -96,6 +96,9 @@
                   </div>
                 </div>
               </div>
+              <div class="col-lg-3">
+                <%= render "sidebars/sidebar-2" %>
+              </div>
             </div>
           </div>
         </div>
