--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,6 +1,21 @@
 <div class="theme-layout">
   <section>
-    <div class="gap gray-bg">
+    <div class="ext-gap high-opacity">
+      <div class="content-bg-wrap" style="background: url(http://res.cloudinary.com/thaophuong1997/image/upload/v1560483352/jmfxefyzw4xx29i4k4e4.jpg)"></div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="top-banner">
+              <h1><b><%= t("slogan") %></b></h1>
+              <h5 style="color: #ffffff"><b><%= t("slogan_small") %></b></h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="gap">
       <div class="container-fluid">
         <div class="row" id="page-contents">
           <div class="col-lg-3">
@@ -29,35 +44,9 @@
                   <a href="#" title="">purify</a>
                 </div>
               </div>
-              <div class="row" id="page-contents">
-                <div class="col-lg-12">
-                  <h2><%= t("text.place_newest") %></h2>
-                  <hr>
-                </div>
-                <div class="col-lg-12">
-                  <div class="row masonry" style="position: relative; height: 647.624px;">
-                    <% @places.each do |place| %>
-                      <div class="hand col-lg-3 col-sm-6" style="position: absolute; float: left; top: 0px;">
-                        <div class="portfolio-box">
-                          <%= image_tag "123.jpeg" %>
-                          <div class="overlinks">
-                            <h4><%= link_to place.name, "#" %></h4>
-                            <ul class="cate">
-                              <li><%= link_to "", "#" %></li>
-                              <li><%= link_to "", "#" %></li>
-                              <li><%= link_to "", "#" %></li>
-                            </ul>
-                          </div>
-                        </div>
-                      </div>
-                    <% end %>
-                  </div>
-                </div>
-              </div>
               <div class="row">
-                <div class="col-lg-12">
+                <div class="section-heading">
                   <h2><%= t("text.tour_newest") %></h2>
-                  <hr>
                 </div>
                 <% @tours.each do |tour| %>
                   <div class="col-lg-6 col-sm-8">
