--- a/app/views/sidebars/_sidebar-3.html.erb
+++ b/app/views/sidebars/_sidebar-3.html.erb
@@ -2,10 +2,10 @@
   <div class="widget">
     <h4 class="widget-title"><%= t("text.place") %></h4>
     <ul class="naves">
-      <% @places.each do |place|%>
+      <% places_newest.each do |place|%>
         <li>
           <i class="ti-clipboard"></i>
-          <%= link_to place.name, "#" %>
+          <%= link_to place.name, place_path(place) %>
         </li>
       <% end %>
     </ul>
@@ -13,7 +13,7 @@
   <div class="widget stick-widget">
     <h4 class="widget-title"><%= t("text.business")%></h4>
     <ul class="followers">
-      <% @users.each do |user| %>
+      <% bussinesses.each do |user| %>
         <li>
           <figure>
             <%= image_tag user.image.image_link.to_s if user.image.present? %>
